[tool.poetry]
name = "a3d"
version = "0.1.2"
description = "A script to find the availability of three letter domains"
authors = ["anoduck <11767-anoduck@users.noreply.gitgud.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
whoisdomain = "^1.20230917.1"
asyncio = "^3.4.3"
tqdm = "^4.66.1"
tld = "^0.13"
fqdn-parser = "^2.1.6"
retry = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
